fixed history text alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,5 +21,5 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 30px;
     font-weight: bold;
-    margin-left: 110px;
+    text-align: center;
 }
